# artic

./: .clang-format  .clang-tidy  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LEXER_VALIDATION.md  LICENSE  MANIFEST.MD  README.md  compile.bat  simple_test.cpp  test_lexer_simple.cpp  validate_compiler.cpp  validate_css_generator.cpp  validate_html_generator.cpp  validate_lexer.cpp  validate_parser.cpp  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  COMPILER_ARCHITECTURE_EXPLAINED.md  COMPILER_IMPLEMENTATION.md  CSS_GENERATOR_IMPLEMENTATION.md  DIRECTORY_STRUCTURE.md  GRAMMAR.md  HTML_GENERATOR_IMPLEMENTATION.md  LEXER_IMPLEMENTATION.md  PARSER_IMPLEMENTATION.md  PHASE1_COMPLETE.md  PROJECT_SETUP.md
examples/component_test/: Card.atc
examples/counter/: Counter.atc
examples/hello_world/: index.atc
examples/with_imports/: App.atc  Card.atc  README.md
runtime/client/: package.json  tsconfig.json
scripts/: build.sh  build_windows.bat  format.sh  install_deps.sh  test.sh
src/: CMakeLists.txt
src/backend/css/: CssGenerator.cpp  CssGenerator.h  UtilityResolver.cpp  UtilityResolver.h
src/backend/html/: HtmlGenerator.cpp  HtmlGenerator.h
src/cli/: main.cpp
src/compiler/: Compiler.cpp  Compiler.h  CompilerOptions.h  ComponentRegistry.cpp  ComponentRegistry.h
src/frontend/ast/: ASTNode.h  Component.h  Decorator.h  Import.h  Props.h  Template.h  Utility.h
src/frontend/lexer/: Lexer.cpp  Lexer.h  SourceLocation.h  Token.cpp  Token.h
src/frontend/parser/: ParseError.h  Parser.cpp  Parser.h
src/shared/utils/: FileSystem.cpp  FileSystem.h
tests/: CMakeLists.txt
tests/unit/backend/: CssGeneratorTest.cpp  HtmlGeneratorTest.cpp
tests/unit/compiler/: CompilerTest.cpp
tests/unit/lexer/: LexerTest.cpp
tests/unit/parser/: ParserTest.cpp
tools/vscode/: .vscodeignore  README.md  install.bat  install.sh  language-configuration.json  package.json
tools/vscode/syntaxes/: artic.tmLanguage.json
